# Stock-Market-and-Presidents

./: .gitignore  Dow Performance by President.csv  Dow Performance by President.numbers  an-exploration-of-data-visualization-libraries.ipynb  app-dash.py  app-panel.py  app-panel_1.py  app-streamlit.py  app.py  app_dash.py  app_flask.py  app_panel_1.py  helper.py  mainplot.py  market-performance-by-president.csv  plot_presidents.py  pyproject.toml  readme  requirements.txt
