[tool.poetry]
name = "stock market and presidents"
version = "0.1.0"
description = ""
authors = ["Thomas Damon <nomadmot@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
plotly = "^5.20.0"
seaborn = "^0.13.2"
dash = "^2.16.1"
flask = "^3.0.2"
streamlit = "^1.33.0"
panel = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
